--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -1,7 +1,7 @@
 name: Task
 description: Userに影響はなく、技術・開発レベルで行う作業を総合的に表すIssue Type
 labels:
-  - "Task 💅"
+  - "Task 💅aaa"
 
 body:
   - type: textarea
