--- a/.github/ISSUE_TEMPLATE/epic.yml
+++ b/.github/ISSUE_TEMPLATE/epic.yml
@@ -19,3 +19,8 @@ body:
     attributes:
       label: Notes
       description: 補足事項を記載する
+
+  - type: textarea
+    attributes:
+      label: Feature Flag
+      description: Feature Flagの名称を記載する
