--- a/.github/ISSUE_TEMPLATE/feature-flag-remove.yml
+++ b/.github/ISSUE_TEMPLATE/feature-flag-remove.yml
@@ -1,11 +1,35 @@
-name: Bug Fix
-description: Feature Flagを削除するためのIssue Type
-title: "test"
+name: Refactor
+description: Refactoring を行う時のIssue Type
+title: "[Refactor]: "
 labels:
-  - "Feature Flag Removal"
-
+  - "Refactor ✨"
 body:
   - type: textarea
     attributes:
       label: Related links
-      description: 関連する Issue や、 Slack のリンクを記載する
+      description: 関連する Issue や、 Slack のリンク、リファクタリングの理由を記載する
+
+  - type: textarea
+    attributes:
+      label: Description
+      description: Refactoringの目的を記載する。より詳細な説明はhttps://github.com/avita-co-jp/documents/blob/main/%E9%96%8B%E7%99%BA%E3%83%AB%E3%83%BC%E3%83%AB/Refactoring-Rule.md
+
+  - type: textarea
+    attributes:
+      label: Scope
+      description: Refactoringをする範囲を大まかに書く。内容としては、「Diffが想像できる」や「方向性が分かる」ような内容で良い。それよりも細かいところはCode Reviewの時に確認する。
+
+  - type: textarea
+    attributes:
+      label: Acceptance Criteria
+      description: このRefactoring Issueが完了する基準を記載する。例えば、Unit Testが全て通るなど。もし、UI上での確認が必要であれば、Gherkin Syntax (Scenario, Given, When, Then)を使用してテストケースを記載する。
+
+  - type: textarea
+    attributes:
+      label: Notes
+      description: 補足事項を記載する
+
+  - type: textarea
+    attributes:
+      label: Feature Flag
+      description: Feature Flagの名称を記載する
