--- a/.github/ISSUE_TEMPLATE/feature-flag-remove.yml
+++ b/.github/ISSUE_TEMPLATE/feature-flag-remove.yml
@@ -1,7 +1,7 @@
 name: Feature Flag Removal
 description: Refactoring を行う時のIssue Type
 labels:
-  - "Refactor ✨"
+  - "Feature Flag Removal"
 body:
   - type: textarea
     attributes:
