--- a/.github/ISSUE_TEMPLATE/user-story.yml
+++ b/.github/ISSUE_TEMPLATE/user-story.yml
@@ -6,8 +6,18 @@ labels:
 body:
   - type: textarea
     attributes:
-      label: Related links
-      description: 関連する Issue や、 Slack のリンクを記載する
+      label: Parent Issues
+      description: User Storyの親にあたるIssueを記載する。
+
+  - type: textarea
+    attributes:
+      label: Child Issues
+      description: 子Issue (User Story Task等) を記載する。
+
+  - type: textarea
+    attributes:
+      label: Others Issues or links
+      description: 関連するその他のIssueや、 リンクを記載する
 
   - type: textarea
     attributes:
