--- a/.github/ISSUE_TEMPLATE/spike.yml
+++ b/.github/ISSUE_TEMPLATE/spike.yml
@@ -6,12 +6,12 @@ body:
   - type: textarea
     attributes:
       label: Related links
-      description: 関連する Issue や、 Slack のリンク、リファクタリングの理由を記載する
+      description: 関連する Issue や、 Slack のリンクを記載する。
 
   - type: textarea
     attributes:
       label: Description
-      description: Refactoringの目的を記載する。より詳細な説明はhttps://github.com/avita-co-jp/documents/blob/main/%E9%96%8B%E7%99%BA%E3%83%AB%E3%83%BC%E3%83%AB/Refactoring-Rule.md
+      description: Spikeの内容と理由を記載する。詳細はこちら参照: https://docs.google.com/presentation/d/1-z6B3tyji7bVegMOyEtl__nOQJrHSETmSV6Ti1NTQxU/edit#slide=id.g26536243de2_0_176
 
   - type: textarea
     attributes:
