--- a/.github/ISSUE_TEMPLATE/bug-fix.yml
+++ b/.github/ISSUE_TEMPLATE/bug-fix.yml
@@ -29,3 +29,18 @@ body:
     attributes:
       label: Feature Flag
       description: Feature Flagの名称を記載する
+
+  - type: textarea
+    attributes:
+      label: Cause (Reporting)
+      description: Bugが起きた原因を詳細に記載する。（5W1H, 5Wなど参照）
+
+  - type: textarea
+    attributes:
+      label: Solution (Reporting)
+      description: どうやって解決したかを記載する。
+
+  - type: textarea
+    attributes:
+      label: Long-term Solution (Reporting)
+      description: 長期的、または恒久対応などが必要であれば記載する。（例えば、Operationの改善など）
