--- a/.github/ISSUE_TEMPLATE/document.yml
+++ b/.github/ISSUE_TEMPLATE/document.yml
@@ -7,7 +7,7 @@ labels:
 body:
   - type: textarea
     attributes:
-      label: Related links
+      label: Related Links
       description: 関連する Issue や、 Slack のリンクを記載する
 
   - type: textarea
