--- a/.github/ISSUE_TEMPLATE/epic.yml
+++ b/.github/ISSUE_TEMPLATE/epic.yml
@@ -17,7 +17,7 @@ body:
 
   - type: textarea
     attributes:
-      label: Others Issues or links
+      label: Others Issues or Links
       description: 関連するその他のIssueや、 リンクを記載する
 
   - type: textarea
