--- a/.github/ISSUE_TEMPLATE/feature-flag-removal.yml
+++ b/.github/ISSUE_TEMPLATE/feature-flag-removal.yml
@@ -1,11 +1,11 @@
-name: Feature flag removal
+name: Feature Flag Removal
 description: Feature Flagの削除を行うIssue Type
 labels:
   - "Feature Flag Removal"
 body:
   - type: textarea
     attributes:
-      label: Related links
+      label: Related Links
       description: 関連する Issue や、 Slack のリンク、リファクタリングの理由を記載する
 
   - type: textarea
