--- a/.github/ISSUE_TEMPLATE/refactoring.yml
+++ b/.github/ISSUE_TEMPLATE/refactoring.yml
@@ -1,12 +1,12 @@
-name: Refactor
+name: Refactoring
 description: Refactoring を行う時のIssue Type
 title: "[Refactor]: "
 labels:
-  - "Refactor ✨"
+  - "Refactoring ✨"
 body:
   - type: textarea
     attributes:
-      label: Related links
+      label: Related Links
       description: 関連する Issue や、 Slack のリンク、リファクタリングの理由を記載する
 
   - type: textarea
