--- a/.github/ISSUE_TEMPLATE/epic.yml
+++ b/.github/ISSUE_TEMPLATE/epic.yml
@@ -2,7 +2,7 @@ name: Epic
 description: 複数のUser StoryをまとめるIssue Type。User Storyより一つ上の階層になる
 title: "[Epic]: "
 labels:
-  - "Epic 🦐"
+  - "Epic"
 
 body:
   - type: textarea
