--- a/.github/ISSUE_TEMPLATE/document.yml
+++ b/.github/ISSUE_TEMPLATE/document.yml
@@ -2,7 +2,7 @@ name: Document
 description: 何かDocument作成をする場合のIssue Type
 title: "[Document]: "
 labels:
-  - "Documentation 📙"
+  - "Documentation"
 
 body:
   - type: textarea
