--- a/.github/ISSUE_TEMPLATE/bug-fix.yml
+++ b/.github/ISSUE_TEMPLATE/bug-fix.yml
@@ -2,7 +2,7 @@ name: Bug Fix
 description: 不具合を修正するIssue Type
 title: "[Bug Fix]: "
 labels:
-  - "Bug Fix 🐛"
+  - "Bug Fix"
 
 body:
   - type: textarea
