--- a/.github/ISSUE_TEMPLATE/change-specification.yml
+++ b/.github/ISSUE_TEMPLATE/change-specification.yml
@@ -1,4 +1,4 @@
-name: Change specification
+name: Change Specification
 description: 既存の仕様を変更する時に使用するIssue Type
 title: "[Change specification]: "
 labels:
