--- a/.github/ISSUE_TEMPLATE/change-specification.yml
+++ b/.github/ISSUE_TEMPLATE/change-specification.yml
@@ -1,8 +1,7 @@
 name: Change Specification
 description: 既存の仕様を変更する時に使用するIssue Type
 title: "[Change specification]: "
-labels:
-  - "Change Specification"
+labels: "Change Specification"
 
 body:
   - type: textarea
