--- a/.github/ISSUE_TEMPLATE/epic.yml
+++ b/.github/ISSUE_TEMPLATE/epic.yml
@@ -17,6 +17,11 @@ body:
 
   - type: textarea
     attributes:
+      label: Figma Design
+      description: FigmaのDesignリンクを記載する。
+
+  - type: textarea
+    attributes:
       label: Others Issues or Links
       description: 関連するその他のIssueや、 リンクを記載する
 
