--- a/.github/ISSUE_TEMPLATE/bug-fix.yml
+++ b/.github/ISSUE_TEMPLATE/bug-fix.yml
@@ -12,6 +12,11 @@ body:
 
   - type: textarea
     attributes:
+      label: Figma Link
+      description: FigmaのDesignリンクを記載する。
+
+  - type: textarea
+    attributes:
       label: Bug Description
       description: 現状のバグ状況を記載する。記載方法は、誰が、何をすると、何が起きるか、を記載する。
 
