--- a/.github/ISSUE_TEMPLATE/user-story.yml
+++ b/.github/ISSUE_TEMPLATE/user-story.yml
@@ -16,7 +16,7 @@ body:
 
   - type: textarea
     attributes:
-      label: Figma Link
+      label: Figma Design
       description: FigmaのDesignリンクを記載する。
 
   - type: textarea
