--- a/.github/ISSUE_TEMPLATE/bug-fix.yml
+++ b/.github/ISSUE_TEMPLATE/bug-fix.yml
@@ -12,7 +12,7 @@ body:
 
   - type: textarea
     attributes:
-      label: Figma Link
+      label: Figma Design
       description: FigmaのDesignリンクを記載する。
 
   - type: textarea
