--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -11,7 +11,7 @@ body:
 
   - type: textarea
     attributes:
-      label: Requirements
+      label: Description
       description: Taskの概要を記載する。（User Storyと同じFormatで誰のためにするか、何をするか、なぜするかで記載する）
 
   - type: textarea 
