--- a/.github/ISSUE_TEMPLATE/bug-fix.yml
+++ b/.github/ISSUE_TEMPLATE/bug-fix.yml
@@ -19,7 +19,7 @@ body:
     attributes:
       label: Bug Description
       description: 現状のバグ状況を記載する。記載方法は、誰が、何をすると、何が起きるか、を記載する。
-                    暫定対応と恒久対応がある場合、暫定対応をBugとしてIssueを作成し、恒久対応をRefactoringのIssueで作成して対応する。
+                   暫定対応と恒久対応がある場合、暫定対応をBugとしてIssueを作成し、恒久対応をRefactoringのIssueで作成して対応する。（この対応で合わない場合は、柔軟に対応する） 
 
   - type: textarea
     attributes:
