--- a/.github/ISSUE_TEMPLATE/architecture-decision.yml
+++ b/.github/ISSUE_TEMPLATE/architecture-decision.yml
@@ -58,5 +58,12 @@ body:
 
   - type: textarea
     attributes:
+      label: Acceptance Criteria 
+      description: | 
+        完了基準を記載する。設計のため誰にReviewを貰ったら完了とするかを記載する。
+        Example: 〇〇さんからReviewをしていただく。
+
+  - type: textarea
+    attributes:
       label: Notes
       description: 補足事項を記載する
