--- a/.github/ISSUE_TEMPLATE/refactoring.yml
+++ b/.github/ISSUE_TEMPLATE/refactoring.yml
@@ -12,7 +12,7 @@ body:
   - type: textarea
     attributes:
       label: Description
-      description: Refactoringの目的を記載する。より詳細な説明はhttps://github.com/avita-co-jp/documents/blob/main/%E9%96%8B%E7%99%BA%E3%83%AB%E3%83%BC%E3%83%AB/Refactoring-Rule.md
+      description: Refactoringの目的を記載する。
 
   - type: textarea
     attributes:
