--- a/.github/ISSUE_TEMPLATE/refactoring.yml
+++ b/.github/ISSUE_TEMPLATE/refactoring.yml
@@ -12,7 +12,7 @@ body:
   - type: textarea
     attributes:
       label: Description
-      description: Refactoringの目的を記載する。
+      description: Refactoringの目的を記載する。何をするのか、なぜするのかで記載する。
 
   - type: textarea
     attributes:
